k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: umb-api-test
  name: umb-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: umb-api
  template:
    metadata:
      labels:
        app: umb-api
    spec:
      containers:
        - image: quay.io/openshift-pipeline/umb-api:latest
          imagePullPolicy: Always
          name: umb-api
          ports:
            - containerPort: 8080
              protocol: TCP
